2008-03-15 [colin]	0.18.0cvs1

	* src/feed.c
		Put the URL: html after <body>

2008-02-08 [paul]	0.18.0

	0.18 released

2008-02-08 [paul]	0.17.0cvs9

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Rezso, Andrea Spadaccini and Ralph Young

2008-01-21 [ticho]	0.17.0cvs8

	* src/opml.c
		Use folder_create_folder() instead of klass->create_folder()
		so that we do not have to scan portion of the tree after the
		import.

2008-01-21 [colin]	0.17.0cvs7

	* src/feed.c
		Fix bug 1478, 'Wrong pthread_create calls all
                over the place'. Thanks to Christian Cornelssen

2008-01-20 [ticho]	0.17.0cvs6

	* src/feed.c
	* src/feed.h
	* src/opml.c
	* src/opml.h
	* src/rssyl.c
	* src/rssyl_cb_menu.c
	* src/rssyl_gtk.c
		Rewrote OPML import routine to allow importing feeds organized
		in folders and to allow feeds to be imported to a specific folder.
		Also, removed import preview, we now simply import found feeds.

2008-01-20 [colin]	0.17.0cvs5

	* src/opml.c
		Fix build :)

2008-01-19 [ticho]	0.17.0cvs4

	* src/Makefile.am
	* src/opml.c
	* src/opml.h
	* src/rssyl.c
		Export feeds to OPML on plugin init.

2008-01-16 [colin]	0.17.0cvs3

	* src/date.c
		Fix build on FreeBSD

2008-01-15 [colin]	0.17.0cvs2

	* src/date.c
		Fix bug 1461, 'several components #define 
		_XOPEN_SOURCE improperly'

2007-12-28 [colin]	0.17.0cvs1

	* src/feed.c
	* src/feed.h
	* src/rssyl_cb_menu.c
	* src/rssyl_cb_menu.h
	* src/rssyl_gtk.c
		Add OPML import.

2007-12-17 [paul]	0.17.0

	0.17.0 released

2007-12-17 [paul]	0.16.0cvs2

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-11-29 [ticho]	0.16.0cvs1

	* configure.ac
		Updated claws-mail minimum version.

2007-11-19 [paul]	0.16.0

	0.16.0 released

2007-11-19 [paul]	0.15.0cvs17

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,